<resources>
    <string name="app_name">post</string>
    <string name="title_activity_add_data">addData</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="show_data">Show data</string>
    <string name="add_data">Add data</string>
    <string name="internet_not_working">Internet not working</string>
    <string name="select_seat">Select Seat</string>
    <string name="check_student">Check Student</string>
    <string name="classroom_display">Classroom Display</string>
    <string name="class_layout_generator">Class Layout Generator</string>
</resources>
